--- a/Clash/config/AAAAAOVO.ini
+++ b/Clash/config/AAAAAOVO.ini
@@ -36,7 +36,7 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🔰 节点选择`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇷🇺 俄国节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]♻️ 自动选择`[]DIRECT
+custom_proxy_group=🔰 节点选择`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇷🇺 俄国节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]♻️ 自动选择
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=🇭🇰 香港节点`url-test`(香港|港1|港2|港3|港A|HK)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|日|JP)`http://www.gstatic.com/generate_204`300
