--- a/Clash/config/AAAAAUPCLOUD.ini
+++ b/Clash/config/AAAAAUPCLOUD.ini
@@ -44,6 +44,7 @@ custom_proxy_group=🇹🇼 台湾节点`url-test`(台湾|台|湾湾|TW)`http://
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|日|JP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|美国|US)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇷🇺 俄国节点`url-test`(俄|俄罗斯|俄国)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|狮城)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=📲 电报消息`select`[]🔰 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇷🇺 俄国节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]♻️ 自动选择`[]DIRECT
 custom_proxy_group=📹 油管视频`select`[]🔰 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇷🇺 俄国节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]♻️ 自动选择
 custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🔰 节点选择
