--- a/Clash/config/AAAAAUPCLOUD.ini
+++ b/Clash/config/AAAAAUPCLOUD.ini
@@ -33,10 +33,10 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🔰 节点选择`select`[]🚀 手动切换`[]🏙️ 城市分组`[]♻️ 自动选择
+custom_proxy_group=🔰 节点选择`select`[]🚀 手动切换`[]🏙️ 城市分组
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=🏙️ 城市分组`select`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇷🇺 俄国节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点
-custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]🚀 手动切换`[]🏙️ 城市分组`[]DIRECT
 custom_proxy_group=🌍 国外媒体`select`[]🔰 节点选择`[]🚀 手动切换`[]🏙️ 城市分组
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🔰 节点选择
 custom_proxy_group=🇬 谷歌服务`select`[]🔰 节点选择`[]🚀 手动切换`[]🏙️ 城市分组
@@ -52,7 +52,6 @@ custom_proxy_group=🇰🇷 韩国节点`url-test`(韩国|韩|KR)`http://www.gst
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|美国|US)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇷🇺 俄国节点`url-test`(俄|俄罗斯|俄国)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|狮城)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
 ;设置分组标志位
 
 enable_rule_generator=true
