--- a/Clash/config/AAAAAOVO.ini
+++ b/Clash/config/AAAAAOVO.ini
@@ -33,18 +33,18 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🔰 节点选择`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇷🇺 俄国节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]♻️ 自动选择
+custom_proxy_group=🔰 节点选择`select`[]🚀 手动切换`[]🏙️ 城市分组
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🔰 节点选择`[]🚀 手动切换
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🔰 节点选择`[]🚀 手动切换
-custom_proxy_group=🇬 谷歌服务`select`[]🔰 节点选择`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇯🇵 日本节点
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🔰 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🚀 手动切换
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🔰 节点选择`[]🚀 手动切换
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🔰 节点选择`[]🚀 手动切换
+custom_proxy_group=🏙️ 城市分组`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇷🇺 俄国节点`[]🇺🇲 美国节点
+custom_proxy_group=🐟 漏网之鱼`select`[]🔰 节点选择`[]🚀 手动切换`[]🏙️ 城市分组`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🔰 节点选择`[]🚀 手动切换`[]🏙️ 城市分组
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🔰 节点选择`[]🚀 手动切换`[]🏙️ 城市分组
+custom_proxy_group=🇬 谷歌服务`select`[]🔰 节点选择`[]🚀 手动切换`[]🏙️ 城市分组
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🔰 节点选择`[]🚀 手动切换`[]🏙️ 城市分组
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🔰 节点选择`[]🚀 手动切换`[]🏙️ 城市分组
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🔰 节点选择`[]🚀 手动切换`[]🏙️ 城市分组
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇭🇰 香港节点`url-test`(香港|港1|港2|港3|港A|HK)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|日|JP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|美国|US)`http://www.gstatic.com/generate_204`300
