--- a/Clash/config/AAAAAUPCLOUD.ini
+++ b/Clash/config/AAAAAUPCLOUD.ini
@@ -13,6 +13,7 @@
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 surge_ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 surge_ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+surge_ruleset=🛑 广告拦截,https://raw.githubusercontent.com/eHpo1/Rules/master/Surge4/Ruleset/Liby.list
 surge_ruleset=🛑 广告拦截,https://raw.githubusercontent.com/LM-Firefly/Rules/master/Adblock/Adblock.list
 surge_ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 surge_ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
